[package]
name = "fast_commandsys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "fast_commandsys"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "*"
termcolor = "1.1.2"
chrono = "0.4.19"

